--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a href="./XSL/Task-1/math.xml" target="_blank">Демо</a>
                 </button>
                 <button>
-                    <a href="https://github.com/vladik7063/itmo-xml-xsl/blob/master/XSL/Task-1/math.xsl" target="_blank">Repository</a>
+                    <a href="https://github.com/vladik7063/vladik7063.github.io/blob/main/XSL/Task-1/math.xsl" target="_blank">Repository</a>
                 </button>
             </div>        
         </div>
@@ -31,14 +31,14 @@
                     <a href="./XSL/Task-2/svg.xml" target="_blank">Демо</a>
                 </button>
                 <button>
-                    <a href="https://github.com/vladik7063/itmo-xml-xsl/blob/master/XSL/Task-2/svg.xsl" target="_blank">Repository</a>
+                    <a href="https://github.com/vladik7063/vladik7063.github.io/blob/main/XSL/Task-2/svg.xsl" target="_blank">Repository</a>
                 </button>
             </div>
         </div>
     </div>
     <h3>GitHub Repository</h3>
     <button>
-        <a href="https://github.com/vladik7063/itmo-xml-xsl" target="_blank">Repository</a>
+        <a href="https://github.com/vladik7063/vladik7063.github.io" target="_blank">Repository</a>
     </button>
 </div>
 </body>
